# NowDisplaying

./: CMakeLists.txt  README.md
include/: NowDisplayingWindow.hpp  QtPtr.hpp  RightClickMenu.hpp  Settings.hpp  SettingsDialog.hpp  Themes.hpp  VlcStatus.hpp
src/: NowDisplayingWindow.cpp  RightClickMenu.cpp  Settings.cpp  SettingsDialog.cpp  Themes.cpp  VlcStatus.cpp  main.cpp
themes/: Default.theme  White.theme
